// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Creates IDE Integration files 1`] = `
Object {
  "status": 0,
  "stderr": "",
  "stdout": "
[__:__:__] Starting Crafty __version__...
Written jest.config.js
Written .gitignore
",
}
`;

exports[`Creates IDE Integration files 2`] = `
"// This configuration was generated by Crafty
// This file is generated to improve IDE Integration
// You don't need to commit this file, nor need it to run \`crafty test\`

module.exports = {
    \\"moduleDirectories\\": [ /* Ignored paths for diff */ ],
    \\"moduleFileExtensions\\": [
        \\"js\\",
        \\"json\\"
    ],
    \\"testPathIgnorePatterns\\": [
        \\"/node_modules/\\",
        \\"__PATH__/packages/integration/fixtures/crafty-preset-jest/ide/dist\\"
    ],
    \\"moduleNameMapper\\": {
        \\"\\\\\\\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$\\": \\"__PATH__/packages/crafty-preset-jest/src/file-mock.js\\",
        \\"\\\\\\\\.(css|less|sass|scss)$\\": \\"__PATH__/packages/crafty-preset-jest/src/style-mock.js\\"
    },
    \\"bail\\": true,
    \\"roots\\": [
        \\"__PATH__/packages/integration/fixtures/crafty-preset-jest/ide\\"
    ],
    \\"transform\\": {
        \\"[/\\\\\\\\\\\\\\\\]node_modules[/\\\\\\\\\\\\\\\\].+\\\\\\\\.m?js$\\": \\"__PATH__/packages/crafty-preset-jest/src/esm-transformer.js\\"
    },
    \\"globals\\": {},
    \\"transformIgnorePatterns\\": [],
    \\"testRegex\\": \\"(/__tests__/.*|(\\\\\\\\.|/)(test|spec))\\\\\\\\.(js)$\\"
};
"
`;

exports[`Creates IDE Integration files 3`] = `
"/jest.config.js
"
`;

exports[`Creates IDE Integration files with Babel 1`] = `
Object {
  "status": 0,
  "stderr": "",
  "stdout": "
[__:__:__] Starting Crafty __version__...
Written jest.config.js
Written .gitignore
",
}
`;

exports[`Creates IDE Integration files with Babel 2`] = `
"// This configuration was generated by Crafty
// This file is generated to improve IDE Integration
// You don't need to commit this file, nor need it to run \`crafty test\`

module.exports = {
    \\"moduleDirectories\\": [ /* Ignored paths for diff */ ],
    \\"moduleFileExtensions\\": [
        \\"js\\",
        \\"json\\"
    ],
    \\"testPathIgnorePatterns\\": [
        \\"/node_modules/\\",
        \\"__PATH__/packages/integration/fixtures/crafty-preset-jest/ide-babel/dist\\"
    ],
    \\"moduleNameMapper\\": {
        \\"\\\\\\\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$\\": \\"__PATH__/packages/crafty-preset-jest/src/file-mock.js\\",
        \\"\\\\\\\\.(css|less|sass|scss)$\\": \\"__PATH__/packages/crafty-preset-jest/src/style-mock.js\\"
    },
    \\"bail\\": true,
    \\"roots\\": [
        \\"__PATH__/packages/integration/fixtures/crafty-preset-jest/ide-babel\\"
    ],
    \\"transform\\": {
        \\"[/\\\\\\\\\\\\\\\\]node_modules[/\\\\\\\\\\\\\\\\].+\\\\\\\\.m?js$\\": \\"__PATH__/packages/crafty-preset-jest/src/esm-transformer.js\\"
    },
    \\"globals\\": {},
    \\"transformIgnorePatterns\\": [],
    \\"testRegex\\": \\"(/__tests__/.*|(\\\\\\\\.|/)(test|spec))\\\\\\\\.(js)$\\"
};
"
`;

exports[`Succeeds with babel 1`] = `
Object {
  "status": 0,
  "stderr": "PASS src/__tests__/math.js
  ✓ adds two numbers (__ms)

Test Suites: 1 passed, 1 total
Tests:       1 passed, 1 total
Snapshots:   0 total
Time:        _____s
Ran all test suites.
",
  "stdout": "
[__:__:__] Starting Crafty __version__...
",
}
`;

exports[`Succeeds with babel and React 1`] = `
Object {
  "status": 0,
  "stderr": "PASS src/__tests__/MyComponent.jsx
  <MyComponent />
    ✓ renders three <Foo /> components (__ms)
    ✓ renders an \`.icon-star\` (__ms)
    ✓ renders children when passed in (__ms)
  <Counter />
    ✓ can render and update a counter (__ms)

Test Suites: 1 passed, 1 total
Tests:       4 passed, 4 total
Snapshots:   0 total
Time:        _____s
Ran all test suites.
",
  "stdout": "
[__:__:__] Starting Crafty __version__...
",
}
`;

exports[`Succeeds with esm module 1`] = `
Object {
  "status": 0,
  "stderr": "PASS src/__tests__/math.js
  ✓ adds two numbers (__ms)

Test Suites: 1 passed, 1 total
Tests:       1 passed, 1 total
Snapshots:   0 total
Time:        _____s
Ran all test suites.
",
  "stdout": "
[__:__:__] Starting Crafty __version__...
",
}
`;

exports[`Succeeds with esm module and babel 1`] = `
Object {
  "status": 0,
  "stderr": "PASS src/__tests__/math.js
  ✓ adds two numbers (__ms)

Test Suites: 1 passed, 1 total
Tests:       1 passed, 1 total
Snapshots:   0 total
Time:        _____s
Ran all test suites.
",
  "stdout": "
[__:__:__] Starting Crafty __version__...
",
}
`;

exports[`Succeeds with typescript 1`] = `
Object {
  "status": 0,
  "stderr": "PASS src/__tests__/math.ts
  ✓ adds two numbers (__ms)

Test Suites: 1 passed, 1 total
Tests:       1 passed, 1 total
Snapshots:   0 total
Time:        _____s
Ran all test suites.
",
  "stdout": "
[__:__:__] Starting Crafty __version__...
",
}
`;

exports[`Succeeds without transpiling 1`] = `
Object {
  "status": 0,
  "stderr": "PASS src/__tests__/math.js
  ✓ adds two numbers (__ms)

Test Suites: 1 passed, 1 total
Tests:       1 passed, 1 total
Snapshots:   0 total
Time:        _____s
Ran all test suites.
",
  "stdout": "
[__:__:__] Starting Crafty __version__...
",
}
`;
